--- a/style.css
+++ b/style.css
@@ -3,11 +3,33 @@
   padding: 0;
 }
 
-#container {
-  background-color: black;
+body {
+  background-color: white;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+
+#resize {
+  margin: 1px 0 0 0;
   color: white;
-  width: 100vw;
-  height: 100vh;
+  background-color: black;
+  border-radius: 5px;
+  font-size: 1rem;
+  border: none;
+}
+
+.container {
+  display: flex;
+  flex-flow: row nowrap;
+  background-color: white;
+}
+.container .grid {
+  margin: 1px 0 1px 1px;
+  border: 1px solid black;
+  background-color: transparent;
+  width: 100px;
+  height: 100px;
 }
 
 /*# sourceMappingURL=style.css.map */
