--- a/style.sass
+++ b/style.sass
@@ -2,9 +2,27 @@
   margin: 0
   padding: 0
 
-#container
-  background-color: black
-  color: white
-  width: 100vw
-  height: 100vh
+body
+  background-color: white
+  display: flex
+  flex-flow: column nowrap
+  align-items: center
 
+#resize
+  margin: 1px 0 0 0
+  color: white
+  background-color: black
+  border-radius: 5px
+  font-size: 1rem
+  border: none
+
+.container
+  display: flex
+  flex-flow: row nowrap
+  background-color: white
+  .grid
+    margin: 1px 0 1px 1px
+    border: 1px solid black
+    background-color: transparent
+    width: 100px
+    height: 100px
