made the syntax everywhere more logical with minor style adjustments

--- a/style.sass
+++ b/style.sass
@@ -8,11 +8,10 @@ body
   flex-flow: column nowrap
   align-items: center
 
-#resize
-  margin: 1px 0 0 0
+#create
+  margin: 0.5rem 0 0.5rem 0
   color: white
   background-color: black
-  border-radius: 5px
   font-size: 1rem
   border: none
 
@@ -21,7 +20,6 @@ body
   flex-flow: row nowrap
   background-color: white
   .grid
-    margin: 1px 0 1px 1px
     border: 1px solid black
     background-color: transparent
     width: 100px
