--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@ body {
   align-items: center;
 }
 
-#resize {
-  margin: 1px 0 0 0;
+#create {
+  margin: 0.5rem 0 0.5rem 0;
   color: white;
   background-color: black;
-  border-radius: 5px;
   font-size: 1rem;
   border: none;
 }
@@ -25,7 +24,6 @@ body {
   background-color: white;
 }
 .container .grid {
-  margin: 1px 0 1px 1px;
   border: 1px solid black;
   background-color: transparent;
   width: 100px;
