--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  overflow: clip;
 }
 
 body {
@@ -8,6 +9,10 @@ body {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+}
+
+#main-container {
+  background-color: transparent;
 }
 
 #create {
@@ -21,13 +26,11 @@ body {
 .container {
   display: flex;
   flex-flow: row nowrap;
-  background-color: white;
+  background-color: transparent;
 }
 .container .grid {
   border: 1px solid black;
   background-color: transparent;
-  width: 100px;
-  height: 100px;
 }
 
 /*# sourceMappingURL=style.css.map */
