--- a/style.sass
+++ b/style.sass
@@ -1,12 +1,16 @@
 *
   margin: 0
   padding: 0
+  overflow: clip
 
 body
   background-color: white
   display: flex
   flex-flow: column nowrap
   align-items: center
+
+#main-container
+  background-color: transparent
 
 #create
   margin: 0.5rem 0 0.5rem 0
@@ -18,9 +22,7 @@ body
 .container
   display: flex
   flex-flow: row nowrap
-  background-color: white
+  background-color: transparent
   .grid
     border: 1px solid black
     background-color: transparent
-    width: 100px
-    height: 100px
