--- a/style.sass
+++ b/style.sass
@@ -1,7 +1,7 @@
 *
   margin: 0
   padding: 0
-  overflow: clip
+  box-sizing: border-box
 
 body
   background-color: white
@@ -18,6 +18,7 @@ body
   background-color: black
   font-size: 1rem
   border: none
+  height: 1rem
 
 .container
   display: flex
