--- a/style.sass
+++ b/style.sass
@@ -7,18 +7,25 @@ body
   background-color: white
   display: flex
   flex-flow: column nowrap
-  align-items: center
 
 #main-container
   background-color: transparent
 
-#create
-  margin: 0.5rem 0 0.5rem 0
-  color: white
-  background-color: black
-  font-size: 1rem
-  border: none
-  height: 1rem
+.button-div
+  height: 50px
+  background-color: lightskyblue
+  display: flex
+  align-items: center
+  justify-content: center
+  .resize
+    height: auto
+    width: auto
+    color: black
+    background-color: transparent
+    border: 2px solid black
+    border-radius: 0.5rem
+    font-size: 1rem
+    font-weight: bold
 
 .container
   display: flex
